Auto stash before merge of "sockets" and "origin/sockets"

--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -26,7 +26,7 @@
               TRACTION
             </a>
             <div ngbDropdownMenu aria-labelledby="navbarDropdown1" class="dropdown-menu">
-              <a ngbDropdownItem href="#" routerLink="/pilot">Pilot</a>
+              <a ngbDropdownItem href="#" routerLink="/pilot">Pilotooo</a>
               <a ngbDropdownItem href="#" routerLink="/copilot">Copilot</a>
             </div>
           </li>
