--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -5,367 +5,24 @@
 	<!-- <div class="card-body bg-black"> -->
 		<!-- <div id="EVA"> -->
 <div class="container-fluid">
-
-
-<div class="row">
-
-
-			<div class="col">
-
-
-			<!-- Sample 1 -->
-			<div class="card-transparent">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseSample1" (click)="isCollapsedSample1 = !isCollapsedSample1" [attr.aria-expanded]="!isCollapsedSample1"> -->
-						<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1 = !isCollapsedSample1" [attr.aria-expanded]="!isCollapsedSample1" aria-controls="collapseSample1">
-							Sample 1
-						</button>
-					</h5>
-				</div>
-				<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion" [ngbCollapse]="isCollapsedSample1"> -->
-				<div id="collapseOne" [ngbCollapse]="isCollapsedSample1">
-					<div class="card-body">
-						<div id="Sample 1">
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_1 = !isCollapsedSample1_1" [attr.aria-expanded]="!isCollapsedSample1_1" aria-controls="collapseSample1_1">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSample1_1" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.1
-										</button>
-									</h5>
-								</div>
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-								<div id="collapse1_1" [ngbCollapse]="isCollapsedSample1_1">
-									<div class="card-body">
-										Info 1.1
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_2 = !isCollapsedSample1_2" [attr.aria-expanded]="!isCollapsedSample1_2" aria-controls="collapseSample1_2">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.2
-										</button>
-									</h5>
-								</div>
-								<div id="collapse1_2" [ngbCollapse]="isCollapsedSample1_2">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 1.2
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_3 = !isCollapsedSample1_3" [attr.aria-expanded]="!isCollapsedSample1_3" aria-controls="collapseSample1_3">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.3
-										</button>
-									</h5>
-								</div>
-								<div id="collapse1_3" [ngbCollapse]="isCollapsedSample1_3">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 1.3
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_4 = !isCollapsedSample1_4" [attr.aria-expanded]="!isCollapsedSample1_4" aria-controls="collapseSample1_4">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.4
-										</button>
-									</h5>
-								</div>
-								<div id="collapse1_4" [ngbCollapse]="isCollapsedSample1_4">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 1.4
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_5 = !isCollapsedSample1_5" [attr.aria-expanded]="!isCollapsedSample1_5" aria-controls="collapseSample1_5">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.5
-										</button>
-									</h5>
-								</div>
-								<div id="collapse1_5" [ngbCollapse]="isCollapsedSample1_5">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 1.5
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample1_6 = !isCollapsedSample1_6" [attr.aria-expanded]="!isCollapsedSample1_6" aria-controls="collapseSample1_6">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 1.6
-										</button>
-									</h5>
-								</div>
-								<div id="collapse1_6" [ngbCollapse]="isCollapsedSample1_6">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 1.6
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
-
-
-
-			<div class="col">
-			<!-- Sample 2 -->
-			<div class="card-transparent">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseSample2" (click)="isCollapsedSample2 = !isCollapsedSample2" [attr.aria-expanded]="!isCollapsedSample2"> -->
-						<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2 = !isCollapsedSample2" [attr.aria-expanded]="!isCollapsedSample2" aria-controls="collapseSample2">
-							Sample 2
-						</button>
-					</h5>
-				</div>
-				<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion" [ngbCollapse]="isCollapsedSample2"> -->
-				<div id="collapseOne" [ngbCollapse]="isCollapsedSample2">
-					<div class="card-body">
-						<div id="Sample 2">
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_1 = !isCollapsedSample2_1" [attr.aria-expanded]="!isCollapsedSample2_1" aria-controls="collapseSample2_1">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSample2_1" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.1
-										</button>
-									</h5>
-								</div>
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-								<div id="collapse2_1" [ngbCollapse]="isCollapsedSample2_1">
-									<div class="card-body">
-										Info 2.1
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_2 = !isCollapsedSample2_2" [attr.aria-expanded]="!isCollapsedSample2_2" aria-controls="collapseSample2_2">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.2
-										</button>
-									</h5>
-								</div>
-								<div id="collapse2_2" [ngbCollapse]="isCollapsedSample2_2">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 2.2
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_3 = !isCollapsedSample2_3" [attr.aria-expanded]="!isCollapsedSample2_3" aria-controls="collapseSample2_3">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.3
-										</button>
-									</h5>
-								</div>
-								<div id="collapse2_3" [ngbCollapse]="isCollapsedSample2_3">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 2.3
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_4 = !isCollapsedSample2_4" [attr.aria-expanded]="!isCollapsedSample2_4" aria-controls="collapseSample2_4">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.4
-										</button>
-									</h5>
-								</div>
-								<div id="collapse2_4" [ngbCollapse]="isCollapsedSample2_4">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 2.4
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_5 = !isCollapsedSample2_5" [attr.aria-expanded]="!isCollapsedSample2_5" aria-controls="collapseSample2_5">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.5
-										</button>
-									</h5>
-								</div>
-								<div id="collapse2_5" [ngbCollapse]="isCollapsedSample2_5">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 2.5
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample2_6 = !isCollapsedSample2_6" [attr.aria-expanded]="!isCollapsedSample2_6" aria-controls="collapseSample2_6">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 2.6
-										</button>
-									</h5>
-								</div>
-								<div id="collapse2_6" [ngbCollapse]="isCollapsedSample2_6">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 2.6
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
-
-			<div class="col">
-			<!-- Sample 3 -->
-			<div class="card-transparent">
-				<div class="card-header" id="headingOne">
-					<h5 class="mb-0">
-						<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseSample3" (click)="isCollapsedSample3 = !isCollapsedSample3" [attr.aria-expanded]="!isCollapsedSample3"> -->
-						<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3 = !isCollapsedSample3" [attr.aria-expanded]="!isCollapsedSample3" aria-controls="collapseSample3">
-							Sample 3
-						</button>
-					</h5>
-				</div>
-				<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion" [ngbCollapse]="isCollapsedSample3"> -->
-				<div id="collapseOne" [ngbCollapse]="isCollapsedSample3">
-					<div class="card-body">
-						<div id="Sample 3">
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_1 = !isCollapsedSample3_1" [attr.aria-expanded]="!isCollapsedSample3_1" aria-controls="collapseSample3_1">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSample3_1" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.1
-										</button>
-									</h5>
-								</div>
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-								<div id="collapse3_1" [ngbCollapse]="isCollapsedSample3_1">
-									<div class="card-body">
-										Info 3.1
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_2 = !isCollapsedSample3_2" [attr.aria-expanded]="!isCollapsedSample3_2" aria-controls="collapseSample3_2">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.2
-										</button>
-									</h5>
-								</div>
-								<div id="collapse3_2" [ngbCollapse]="isCollapsedSample3_2">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 3.2
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_3 = !isCollapsedSample3_3" [attr.aria-expanded]="!isCollapsedSample3_3" aria-controls="collapseSample3_3">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.3
-										</button>
-									</h5>
-								</div>
-								<div id="collapse3_3" [ngbCollapse]="isCollapsedSample3_3">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 3.3
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_4 = !isCollapsedSample3_4" [attr.aria-expanded]="!isCollapsedSample3_4" aria-controls="collapseSample3_4">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.4
-										</button>
-									</h5>
-								</div>
-								<div id="collapse3_4" [ngbCollapse]="isCollapsedSample3_4">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 3.4
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_5 = !isCollapsedSample3_5" [attr.aria-expanded]="!isCollapsedSample3_5" aria-controls="collapseSample3_5">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.5
-										</button>
-									</h5>
-								</div>
-								<div id="collapse3_5" [ngbCollapse]="isCollapsedSample3_5">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 3.5
-									</div>
-								</div>
-							</div>
-							<div class="card-transparent">
-								<div class="card-header" id="headingOne">
-									<h5 class="mb-0">
-										<button type="button" class="btn btn-outline-warning" (click)="isCollapsedSample3_6 = !isCollapsedSample3_6" [attr.aria-expanded]="!isCollapsedSample3_6" aria-controls="collapseSample3_6">
-										<!-- <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> -->
-											Sample 3.6
-										</button>
-									</h5>
-								</div>
-								<div id="collapse3_6" [ngbCollapse]="isCollapsedSample3_6">
-								<!-- <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion"> -->
-									<div class="card-body">
-										Info 3.6
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			</div>
-</div>
-
+	<div class="row">
+		<!-- <div class="col-xs-12 text-center"> -->
+		<div class="col">
+			<img class="card-img-top" src="/static/assets/Sensors/EVA1A.png" alt="EVA 1 img" height="300px" width="10px"/>
+		</div>
+		<div class="col">
+			<img class="card-img-top" src="/static/assets/Sensors/EVA2A.png" alt="EVA 2 img" height="300px" width="10px"/>
+		</div>
+		<div class="col">
+			<img class="card-img-top" src="/static/assets/Sensors/EVA3A.png" alt="EVA 3 img" height="300px" width="10px"/>
+		</div>
+		<div class="col">
+			<img class="card-img-top" src="/static/assets/Sensors/EVA4A.png" alt="EVA 4 img" height="300px" width="10px"/>
+		</div>
+		<div class="col">
+			<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA5.png" alt="EVA 5 img" height="300px" width="10px"/>
+		</div>
+	</div>
 </div>
 		<!-- </div> -->
 	<!-- </div> -->
