--- a/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
+++ b/Robocol/testapp/src/app/rover/traccion/copilot/copilot.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <img class="card-img-top" src="../../../assets/Sensors/graph.gif" alt="Map">
+      <img class="card-img-top" src="/static/assets/Sensors/graph.gif" alt="Map">
     </div>
     <div class="col">
       <app-telemetry></app-telemetry> 
