--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -42,6 +42,9 @@
           <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
             <a routerLinkActive="active" routerLink="/sensorica" class="nav-link">SENSORS<span class="sr-only">(current)</span>  </a>
           </li>
+          <li class="nav-item" *ngxPermissionsOnly="['ROVER']">
+            <a routerLinkActive="active" routerLink="/fpga" class="nav-link">FPGA<span class="sr-only">(current)</span>  </a>
+          </li>
           <!-- Pestanas del SUBMARINO -->
           <li class="nav-item" *ngxPermissionsOnly="['SUBMARINO']">
             <a routerLinkActive="active" routerLink="/navegacion" class="nav-link">NAVIGATION<span class="sr-only">(current)</span>  </a>
