--- a/Robocol/testapp/src/app/rover/fpga/params/params.component.html
+++ b/Robocol/testapp/src/app/rover/fpga/params/params.component.html
@@ -6,7 +6,7 @@
 					<tr>
 						<th scope="row">
 							Dip Switch:
-							<input disabled id="dip_sw" name="field1" value="{{lastMessage}}"/>
+							<input disabled id="dip_sw" name="field1" value=""/>
 						</th>
 						<th id="EVA_1_1">
 							LEDs:
