--- a/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/analysis/analysis.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
 <!-- <div class="card border-warning bg-transparent"> -->
 	<!-- <div class="card-header text-warning text-center">
@@ -9,9 +9,9 @@
 			<h5 class="card-title">Database analysis description</h5>
 		</div> -->
 		<div class="row">
-			<div class="col">
+			<div class="col-sm-12">
 				<div class="row">
-					<div class="col">
+					<div class="col col-sm-4">
 						<div class="categories">
 							<pre><b>Temperature:</b></pre>
 							<pre><b>PH:</b></pre>
@@ -19,7 +19,7 @@
 							<pre><b>Humidity:</b></pre>
 						</div>
 					</div>
-					<div class="col">
+					<div class="col col-sm-8">
 						<div class="categories">
 							<input disabled id="ph" name="field2" value="Tropical or megathermal."/> <!--  value="{{measurements_value['temp']}}"/> -->
 							<input disabled id="ph" name="field2" value="Alkaline."/> <!-- value="{{measurements_value['ph']}}"/> -->
@@ -33,18 +33,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="col">
+			<!-- <div class="col"> -->
 				<!-- <div class="card-transparent"> -->
 					<!-- <div class="card-body"> -->
 						<!-- <div class="row"> -->
 								<!-- <h5 class="card-title" -->
-								Graphs
+								<!-- Graphs -->
 							<!-- </h5> -->
 						<!-- </div> -->
 						<!-- <div class="row">
 								<img src="/static/assets/pirita.jpg" alt="Rocks" width="150px">
 						</div> -->
-			</div>
+			<!-- </div> -->
 		</div>
 </div>
 		<!-- </div> -->
