--- a/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/eva/eva.component.html
@@ -1,29 +1,53 @@
-<!-- <div class="card border-warning bg-transparent"> -->
-	<!-- <div class="card-header text-warning text-center">
+<div class="card border-warning bg-transparent">
+	<div class="card-header text-warning text-center">
 		EVA
-	</div> -->
-	<!-- <div class="card-body bg-black"> -->
-		<!-- <div id="EVA"> -->
-<div class="container-fluid">
-	<div class="row">
-		<!-- <div class="col-xs-12 text-center"> -->
-		<div class="col">
-			<img class="card-img-top" src="/static/assets/Sensors/EVA1A.png" alt="EVA 1 img" height="300px" width="10px"/>
-		</div>
-		<div class="col">
-			<img class="card-img-top" src="/static/assets/Sensors/EVA2A.png" alt="EVA 2 img" height="300px" width="10px"/>
-		</div>
-		<div class="col">
-			<img class="card-img-top" src="/static/assets/Sensors/EVA3A.png" alt="EVA 3 img" height="300px" width="10px"/>
-		</div>
-		<div class="col">
-			<img class="card-img-top" src="/static/assets/Sensors/EVA4A.png" alt="EVA 4 img" height="300px" width="10px"/>
-		</div>
-		<div class="col">
-			<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA5.png" alt="EVA 5 img" height="300px" width="10px"/>
+	</div>
+	<div class="card-body bg-black">
+		<div id="EVA" class="container-fluid">
+			<div class="row align-items-center">
+				<div class="col col-lg-12">
+					<div class="row">
+						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
+						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E1.1.png" alt="EVA 1 img"/>
+					</div>
+					<div class="row">
+						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
+						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E2.1.png" alt="EVA 2 img"/>
+					</div>
+					<div class="row">
+						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E6.1.png" alt="EVA 1 img"/>
+						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E3.1.png" alt="EVA 3 img" />
+					</div>
+					<div class="row">
+						<img class="card-img-top" id="status" src="/static/assets/Sensors/EVA/E7.1.png" alt="EVA 1 img"/>
+						<img class="card-img-top" id="box" src="/static/assets/Sensors/EVA/E4.1.png" alt="EVA 4 img"/>
+						<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA/E8.png" alt="EVA 5 img"/>
+					</div>
+				<!-- </div>
+				<div class="col"> -->
+					<!-- <div class="col-xs-12 text-center"> -->
+					<!-- <div class="row">
+						<img class="card-img-top" src="/static/assets/Sensors/EVA/E1.1.png" alt="EVA 1 img"/>
+					</div>
+					<div class="row">
+						<img class="card-img-top" src="/static/assets/Sensors/EVA/E2.1.png" alt="EVA 2 img"/>
+					</div>
+					<div class="row">
+						<img class="card-img-top" src="/static/assets/Sensors/EVA/E3.1.png" alt="EVA 3 img" />
+					</div>
+					<div class="row">
+						<img class="card-img-top" src="/static/assets/Sensors/EVA/E4.1.png" alt="EVA 4 img"/>
+					</div> -->
+				</div>
+				<!-- <div class="col"> -->
+					
+				<!-- </div> -->
+				<!-- <div class="col col-sm">
+					<div class="row">
+						<img class="card-img-top" id="embudo" src="/static/assets/Sensors/EVA/E8.png" alt="EVA 5 img"/>
+					</div>
+				</div> -->
+			</div>
 		</div>
 	</div>
 </div>
-		<!-- </div> -->
-	<!-- </div> -->
-<!-- </div> -->
