--- a/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/sensorica.component.html
@@ -1,12 +1,20 @@
 <div class="container-fluider px-lg-5 ">
-  <div class="row mx-lg-n4 align-items-center">
-    <!-- COLUMN 1 -->
-    <div class="col py-1 px-xl-1 align-self-start">
-      <app-live></app-live> 
-    </div>
-    <!-- COLUMN 2 -->
-    <div class="col py-1 px-xl-1 align-self-start">
-      <app-tabs></app-tabs>
-    </div>
-  </div>
+	<br>
+	<div class="row mx-lg-n4 align-items-start">
+		<!-- COLUMN 1 -->
+		<!-- <div class="col py-1 px-xl-1 align-self-start"> -->
+		<div class="col-sm-5">
+			<app-live></app-live> 
+		</div>
+		<!-- COLUMN 2 -->
+		<!-- <div class="col py-1 px-sm-1 align-self-start"> -->
+		<div class="col-sm-3">
+			<app-eva></app-eva>
+		</div>
+		<!-- COLUMN 3 -->
+		<!-- <div class="col py-1 px-xl-1 align-self-start"> -->
+		<div class="col-sm-4">
+			<app-tabs></app-tabs>
+		</div>
+	</div>
 </div>
