--- a/Robocol/testapp/src/app/rover/sensorica/tabs/tabs.component.html
+++ b/Robocol/testapp/src/app/rover/sensorica/tabs/tabs.component.html
@@ -1,14 +1,17 @@
 <div class="card border-warning bg-transparent text-center">
+  <div class="card-header text-warning">
+      Data Analysis
+    </div>
   <div class="card-body bg-black mt-0 pt-0 px-2 mx-2">
     <div class="table-responsive-sm">
       <table class="table table-dark bg-transparent">
-        <thead>
+        <!-- <thead>
           <tr>
             <th scope="col">Category</th>
           </tr>
-        </thead>
+        </thead> -->
         <tbody>
-          <tr>
+          <!-- <tr>
             <th scope="row">
               <button type="button" id="vert" class="btn btn-outline-warning" (click)="isCollapsedEVA = !isCollapsedEVA" [attr.aria-expanded]="!isCollapsedEVA" aria-controls="collapseEVA">
                 EVA
@@ -25,7 +28,7 @@
                 </div>
               </div>
             </th>
-          </tr>
+          </tr> -->
           <tr>
             <th scope="row">
               <button type="button" id="vert" class="btn btn-outline-warning" (click)="isCollapsedMeas = !isCollapsedMeas" [attr.aria-expanded]="!isCollapsedMeas" aria-controls="collapseMeas">
