--- a/Robocol/testapp/src/app/rover/fpga/pinout/pinout.component.html
+++ b/Robocol/testapp/src/app/rover/fpga/pinout/pinout.component.html
@@ -1,12 +1,12 @@
 <div class="container">
 	<div class="row">
-		<div class="col">
+		<div class="col" style="color:white">
 			GPIO 0
 		</div>
 		<div class="col">
-			<img class="card-img-top" src="/static/assets/FPGA/DE0_Nano_SoC_Front.png" alt="Anemometer img" width="100px"/>
+			<img class="card-img-top" src="/static/assets/FPGA/DE0_Nano_SoC_Front.png" alt="Anemometer img" width="150px"/>
 		</div>
-		<div class="col">
+		<div class="col" style="color:white">
 			GPIO 1
 		</div>
 	</div>
